Revision history for LWP-ConsoleLogger

{{$NEXT}}

0.000042  2019-06-12 15:15:52Z
    -  Don't rely on Mojo to be installed in tests (GH#18) (Olaf Alders)

0.000041  2019-06-12 12:31:03Z
    - Bump minimum Mojo version required for tests (GH#17) (Olaf Alders)
    - Add support for Mojo::UserAgent to LWP::ConsoleLogger::Everywhere ((GH#16) simbabque)

0.000040  2019-06-11 01:22:03Z
    - Add support for Mojo::UserAgent (GH#14) (Gregory Oschwald)

0.000039  2018-08-01 19:40:39Z
    - (temporarily?) skip XML parsing test under newer versions of Data::Printer

0.000038  2018-07-28 02:39:17Z
    - Add support for HTTP::CookieJar

0.000037  2018-02-09 15:54:17Z
    - Improve docs by pushing users towards LWP::ConsoleLogger::Everywhere as a
      first step

0.000036  2017-07-21 22:02:23Z
    - Re-log the request headers when we get the response
    - Don't skip Cookie and Set-Cookie when dumping headers

0.000035  2017-03-01 14:38:00-05:00 America/Toronto
    - Adds LWP::ConsoleLogger::Everywhere (simbabque)

0.000034  2017-01-23 09:24:06-05:00 America/Toronto
    - Don't redact x-www-form-urlencoded data.

0.000033  2016-12-03 21:46:12-05:00 America/Toronto
    - Fix test that failed under some terminal widths (Varadinsky).
      https://github.com/oalders/lwp-consolelogger/pull/8

0.000032  2016-11-29 14:58:25-05:00 America/Toronto
    - Maybe guess at content type when parsing body.

0.000031  2016-11-25 13:08:50-05:00 America/Toronto
    - Display request body if available.

0.000030  2016-09-13 17:55:24-04:00 America/Toronto
    - Document header and parameter redaction
    - Suppress use of tables in some instances via "pretty"

0.000029  2016-09-13 10:37:57-04:00 America/Toronto
    - Stop setting default headers via debug_ua()

0.000028  2016-06-20 15:46:31-04:00 America/Toronto
    - Full release.  Contains no changes from previous trial release.

0.000027  2016-06-18 10:31:58-04:00 America/Toronto (TRIAL RELEASE)