@@ -1,6 +1,7 @@
 Revision history for LWP-ConsoleLogger
 
 {{$NEXT}}
+    - Ensure that a silent logger is actually silent (GH#21) (Olaf Alders)
 
 0.000042  2019-06-12 15:15:52Z
     -  Don't rely on Mojo to be installed in tests (GH#18) (Olaf Alders)
